# patchright-scrape-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-image2.yml
app/: app.py  blocklist.txt
