[project]
name = "patchright-scrape-api"
version = "0.1.0"
description = "Simple scraping API based on patchright"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=2.0.3",
    "fastapi>=0.115.8",
    "html-sanitizer>=2.5.0",
    "markdownify>=1.0.0",
    "patchright>=1.50.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
